--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ description: Track and optimize your sales team in real time
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">The last sales CRM <strong>you'll ever need</strong></h1>
-		<p class="subtext editable">Track and optimize your sales team in real time.</p>
-		<div class="cta button alt"><a href="/sign-up/">Get Started Free</a></div>
+		<h1 class="editable">呢個係 <strong>Jonny</strong></h1>
+		<p class="subtext editable">你既 24 小時宣傳助手</p>
+		<!-- <div class="cta button alt"><a href="/sign-up/">Get Started Free</a></div> -->
 		<div>
-			<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+			<img src="/images/logo.png" alt="Screenshot" class="editable" />
 		</div>
 	</div>
 </section>
@@ -17,11 +17,14 @@ description: Track and optimize your sales team in real time
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can we <strong>double</strong> our sales revenue?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources. </p>
+				<h2>嶄新<strong>電子積分卡</strong></h2>
+				<p>
+					Jonny 透過嶄新技術將電子積分卡儲存係手提電話。當客人俾錢個陣，只要佢有帶電話，就可以掃一掃 Qrcode 儲積分。咁就解決左客人成日唔記得帶卡既問題，又慳番印卡既時間同錢。
+				</p>
+
 			</div>
 			<div class="image">
-				<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="/images/loyalty_card.png" alt="Screenshot" class=" editable" />
 			</div>
 		</div>
 	</section>
@@ -29,11 +32,11 @@ description: Track and optimize your sales team in real time
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can I <strong>keep track</strong> of my sales team?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+				<h2>認識<strong>新客戶</strong></h2>
+				<p>如果客人係第一次幫襯，Jonny 仲會主動向客人瞭解喜好同收集意見，令你更瞭解客人既評價，提升餐廳既服務水平</p>
 			</div>
 			<div class="image">
-				<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="/images/survey.png" alt="Screenshot" class="editable" />
 			</div>
 		</div>
 	</section>
@@ -41,11 +44,23 @@ description: Track and optimize your sales team in real time
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can I <strong>forecast</strong> the next 90 days?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+				<h2>提升<strong>營業額</strong></h2>
+				<p>每當客人有一段時間無黎幫襯，Jonny 就會提下客人黎儲多 D 積分，幫助你提升營業額。</p>
 			</div>
 			<div class="image">
-				<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img width="30" src="/images/istockphoto-1015689908-612x612.jpg" alt="Screenshot" class="" />
+			</div>
+		</div>
+	</section>
+
+	<section>
+		<div class="container flex">
+			<div class="text editable">
+				<h2>增加<strong>5星評分</strong></h2>
+				<p>Jonny 仲會自動識別邊個係你既熟客，邀請佢地係 FB / Google 地圖 為你餐廳俾個好評! </p>
+			</div>
+			<div class="image">
+				<img width="30" src="/images/rating.png" alt="Screenshot" class="" />
 			</div>
 		</div>
 	</section>
@@ -53,17 +68,33 @@ description: Track and optimize your sales team in real time
 	<section class="testimonial">
 		<div class="container flex">
 			<div class="testimonial-block">
-				<div class="square-image"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James" class="editable"></div>
+				<!-- <div class="square-image"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James" class="editable"></div> -->
 				<blockquote>
-					<p class="editable">Hydra has shaped the business we have today. We have a repeatable sales process and a strategy to scale our team. I recommend Hydra to any business looking to improve their sales.</p>
-					<p class="editable author">Jim James - CEO of Global Corp.</p>
+					<p class="editable">如是者，Jonny 每日就為你記錄低每位客人既喜好同消費習慣。好快，Jonny 就會幫你儲起左幾百，甚至過千個客戶。</p>
+					<!-- <p class="editable author">Jim James - CEO of Global Corp.</p> -->
 				</blockquote>
+			</div>
+
+
+		</div>
+		<!-- <div>
+				<img width="30" src="/images/crowd-20970718.jpg" alt="Screenshot" class="" />
+		</div> -->
+	</section>
+
+	<section>
+		<div class="container flex">
+			<div class="text editable">
+				<h2>展開<strong>宣傳攻勢</strong></h2>
+				<p>係呢個時候，你就可以搵 Jonny 向客人發送宣傳訊息，協助你將新產品或優惠推廣俾客人</p>
+			</div>
+			<div class="image">
+				<img width="30" src="/images/promotion.jpg" alt="Screenshot" class="" />
 			</div>
 		</div>
 	</section>
-
 	<section class="bottom-cta">
-		<h2 class="editable"><strong>Improve</strong> your sales process today</h2>
+		<h2 class="editable">立即試用</h2>
 		<div class="button alt"><a href="#">Get Started Free</a></div>
 	</section>
 </div>
