New image and additonal text

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ description: Track and optimize your sales team in real time
 		<div class="container flex">
 			<div class="text editable">
 				<h2>增加<strong>5星評分</strong></h2>
-				<p>Jonny 仲會自動識別邊個係你既熟客，邀請佢地係 FB / Google 地圖 為你餐廳俾個好評! </p>
+				<p>Jonny 仲會自動識別邊個係你既熟客，邀請佢地係 IG，FB， Google 地圖及 Open Rice為你餐廳寫個好評! </p>
 			</div>
 			<div class="image">
 				<img width="30" src="/images/rating.png" alt="Screenshot" class="" />
@@ -89,12 +89,26 @@ description: Track and optimize your sales team in real time
 				<p>係呢個時候，你就可以搵 Jonny 向客人發送宣傳訊息，協助你將新產品或優惠推廣俾客人</p>
 			</div>
 			<div class="image">
-				<img width="30" src="/images/promotion.jpg" alt="Screenshot" class="" />
+				<img width="30" src="/images/promotion.png" alt="Screenshot" class="" />
 			</div>
 		</div>
 	</section>
+
+	<section>
+		<div class="container flex">
+			<div class="text editable">
+				<h2>價錢</strong></h2>
+				<p>只要用每日半杯咖啡既價錢，你就可以請 Jonny 24 小時為你宣傳</p>
+			</div>
+			<div class="image">
+				<img width="30" src="/images/coffee.png" alt="Screenshot" class="" />
+			</div>
+		</div>
+	</section>
+
+
 	<section class="bottom-cta">
-		<h2 class="editable">立即試用</h2>
-		<div class="button alt"><a href="#">Get Started Free</a></div>
+		<h2 class="editable">第一個月免費</h2>
+		<div class="button alt"><a href="#">立即試用</a></div>
 	</section>
 </div>
