--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
-title: The last sales CRM you'll ever need
-description: Track and optimize your sales team in real time
+title: Jonny - 你既 24 小時宣傳助手
+description: Jonny - 你既 24 小時宣傳助手
 ---
 <section class="hero">
 	<div class="text-container">
