update images and footer

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ description: Jonny - 你既 24 小時宣傳助手
 				<p>每當客人有一段時間無黎幫襯，Jonny 就會提下客人黎儲多 D 積分，幫助你提升營業額。</p>
 			</div>
 			<div class="image">
-				<img width="30" src="/images/istockphoto-1015689908-612x612.jpg" alt="Screenshot" class="" />
+				<img src="/images/growth.png" alt="Screenshot" class="" />
 			</div>
 		</div>
 	</section>
@@ -60,7 +60,7 @@ description: Jonny - 你既 24 小時宣傳助手
 				<p>Jonny 仲會自動識別邊個係你既熟客，邀請佢地係 IG，FB， Google 地圖及 Open Rice為你餐廳寫個好評! </p>
 			</div>
 			<div class="image">
-				<img width="30" src="/images/rating.png" alt="Screenshot" class="" />
+				<img src="/images/rating.png" alt="Screenshot" class="" />
 			</div>
 		</div>
 	</section>
@@ -77,9 +77,6 @@ description: Jonny - 你既 24 小時宣傳助手
 
 
 		</div>
-		<!-- <div>
-				<img width="30" src="/images/crowd-20970718.jpg" alt="Screenshot" class="" />
-		</div> -->
 	</section>
 
 	<section>
@@ -89,7 +86,7 @@ description: Jonny - 你既 24 小時宣傳助手
 				<p>係呢個時候，你就可以搵 Jonny 向客人發送宣傳訊息，協助你將新產品或優惠推廣俾客人</p>
 			</div>
 			<div class="image">
-				<img width="30" src="/images/promotion.png" alt="Screenshot" class="" />
+				<img src="/images/promotion.png" alt="Screenshot" class="" />
 			</div>
 		</div>
 	</section>
@@ -99,16 +96,17 @@ description: Jonny - 你既 24 小時宣傳助手
 			<div class="text editable">
 				<h2>價錢</strong></h2>
 				<p>只要用每日半杯咖啡既價錢，你就可以請 Jonny 24 小時為你宣傳</p>
+				<p style="font-size: 0.8em">*月費$599，以一年付款計算</p>
 			</div>
 			<div class="image">
-				<img width="30" src="/images/coffee.png" alt="Screenshot" class="" />
+				<img src="/images/coffee.png" alt="Screenshot" class="" />
 			</div>
 		</div>
 	</section>
 
 
 	<section class="bottom-cta">
-		<h2 class="editable">第一個月免費</h2>
-		<div class="button alt"><a href="#">立即試用</a></div>
+		<h2 class="editable">首月免費</h2>
+		<div class="button alt"><a href="#">立即登記</a></div>
 	</section>
 </div>
