--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@ description: Jonny - 你既 24 小時宣傳助手
 <section class="hero">
 	<div class="text-container">
 		<h1 class="editable">呢個係 <strong>Jonny</strong></h1>
+		<!-- <div style="width:250px; margin-left: auto; margin-right: auto;" >
+			<img src="/images/logo.png" alt="Screenshot" class="editable" />
+		</div> -->
+
 		<p class="subtext editable">你既 24 小時宣傳助手</p>
 		<!-- <div class="cta button alt"><a href="/sign-up/">Get Started Free</a></div> -->
-		<div>
+		<!-- <div style="min-width:150px; width: 450px; margin-left: auto; margin-right: auto;" > -->
+		<div style="max-width: 60%; margin-left: auto; margin-right: auto;">
 			<img src="/images/logo.png" alt="Screenshot" class="editable" />
 		</div>
 	</div>
