--- a/index.html
+++ b/index.html
@@ -112,6 +112,16 @@ description: Jonny - 你既 24 小時宣傳助手
 
 	<section class="bottom-cta">
 		<h2 class="editable">首月免費</h2>
-		<div class="button alt"><a href="tel: {{ site.data.footer.tel }}">立即致電 3111 8703</a></div>
+		<div class="button alt"><a id="callUsNow" href="tel: {{ site.data.footer.tel }}">立即致電 3111 8703</a></div>
+
+
+		<script type="text/javascript">
+			$(document).ready(function () {
+				$('#callUsNow').click(function () {
+					fbq('track', 'Lead');
+				});
+			});
+
+		</script>
 	</section>
 </div>
